[package]
name = "riker-patterns"
version = "0.1.9"
authors = ["Lee Smith <leenozara@gmail.com>"]
description = "A collection of common actor patterns for Riker"
homepage = "https://riker.rs"
repository = "https://github.com/riker-rs/riker-patterns"
license = "MIT"
readme = "README.md"

[dependencies]
riker = "0.1.9"
futures-preview = "0.2.2"

[dev-dependencies]
riker-default = "0.1.9"
riker-testkit = "0.1.0"